OW-5, fix alignment problem and some other problems.

--- a/server/static/web/less/index_login.less
+++ b/server/static/web/less/index_login.less
@@ -113,6 +113,7 @@
       padding: 0;
       border: none;
       height: 20px;
+      margin-bottom: 6px;
     }
 
   }
